tests/fixtures/invalid/ordering_type_mismatch.nl
fn main -> bool
    false < true
